# C-Mod_Analysis

./: README.md  afsp_probes.py  cmod_tools.py  cmod_tools_eqdsk.py  cmod_tools_eqtools.py  cmod_tools_omfit.py  cmod_tools_rhopR.py  data_access.py  find_separatrix.py  fit_2D.py  fit_profiles.py  power_balance.py  pyproject.toml  run_db.py  single_shot.py  twopoint_model.py
cmod_analysis/: cmod_tools.py  data_access.py  fit_profiles.py  power_balance.py  single_shot.py
eqtools/: CModEFIT.py  EFIT.py  __init__.py  afilereader.py  core.py  eqdskreader.py  filewriter.py  pfilereader.py  trispline.py
gfiles/: g1000525013.00772  g1001215024.01295  g1010628017.00935  g1010628019.00960  g1010703004.01240  g1021105007.00940  g1021105009.01089  g1030516028.00965
profiletools/: CMod.py  core.py  fit_profile.py  gui.py  transformations.py
