[tool.poetry]
name = "cmod_analysis"
version = "0.1.0"
description = "Standardized C-Mod analysis routines for Thomson profiles"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
numpy = ">=1.24.4"
matplotlib = ">=3.7.5"
xarray = ">=2023.1.0"
scipy = ">=1.10.1"
aurora = "0.3.13"
future = "1.0.0"
ipython = ">=7.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
